--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>Lucy Curtis</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	</head>
+<style media="screen">
+a:link {
+	color: hotpink;
+}
+a:visited {
+    color: hotpink;
+}
+a:hover {
+    color: blue;
+}
+
+.links{
+	font-family: courier;
+	font-size: 40pt;
+	margin-left: 250px;
+	margin-top: 100px;
+}
+
+.heading{
+	font-family: courier;
+	font-size: 15pt;
+	margin-left: 250px;
+	margin-top: 15px;
+}
+
+</style>
+	</head> 
 	<body>
 
-	<a href="level1a.html">Level 1a</a>
-	<a href="level1b.html">Level 1b</a>
-	<a href="level1c.html">Level 1c</a>
+<div class="heading">
+	<p>
+		Hello my name is Lucy...
+	</p>
+</div>
+
+<div class="links">
+	<a href="week 1/level1a.html">Level 1a</a>
+	<a href="week 1/level1b.html">Level 1b</a>
+	<a href="week 1/level1c.html">Level 1c</a>
 	<br><br>
-	<a href="level2a.html">Level 2a</a>
-	<a href="level2b.html">Level 2b</a>
-	<a href="level2c.html">Level 2c</a>
+	<a href="week 1/level2a.html">Level 2a</a>
+	<a href="week 1/level2b.html">Level 2b</a>
+	<a href="week 1/level2c.html">Level 2c</a>
+	<br><br>
+	<a href="week 1/level3a.html">Level 3a</a>
+	<a href="week 1/level3b.html">Level 3b</a>
+	<a href="week 1/level3c.html">Level 3c</a>
+	<br><br>
+	<a href="week 1/level4a.html">Level 4a</a>
+	<a href="week 1/level4b.html">Level 4b</a>
+	<a href="week 1/level4c.html">Level 4c</a>
+	<br><br>
+	<a href="essay/index.html">essay</a>
+</div>
+
 
 
 	</body>
