--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:hover {
 <div class="links">
 	<a href="week_1/index.html">Levels</a>
 	<br><br>
-	<a href="essay.html">essay</a>
+	<a href="week_1/essay.html">essay</a>
 </div>
 
 
