--- a/week 1/index.html
+++ b/week 1/index.html
@@ -19,7 +19,7 @@ a:hover {
 	font-size: 40pt;
 	margin-left: 250px;
 	margin-top: 100px;
-} 
+}
 
 .heading{
 	font-family: courier;
@@ -52,10 +52,9 @@ a:hover {
 	</head>
 	<body>
 
-<div class="heading">
-	<p>
-		Hello my name is Lucy...
-	</p>
+<div class="links">
+	<a href="index.html">Lucy Curtis</a>
+
 </div>
 
 <div class="links">
@@ -74,6 +73,8 @@ a:hover {
 	<a href="level4a.html">Level 4a</a>
 	<a href="level4b.html">Level 4b</a>
 	<a href="level4c.html">Level 4c</a>
+	<br><br>
+	<a href="essay.html">essay</a>
 </div>
 
 
