--- a/index.html
+++ b/index.html
@@ -6,43 +6,46 @@
 <style media="screen">
 a:link {
 	color: hotpink;
+	text-decoration: none;
 }
 a:visited {
     color: hotpink;
+		text-decoration: none;
 }
 a:hover {
     color: blue;
+		text-decoration: none;
 }
 
 .links{
 	font-family: courier;
-	font-size: 40pt;
+	font-size: 35pt;
 	margin-left: 250px;
-	margin-top: 100px;
+	margin-top: 85px;
+	border: 5px solid;
+	border-color: blue;
+	padding: 20px;
+	width: 200px;
 }
 
-.heading{
-	font-family: courier;
-	font-size: 15pt;
-	margin-left: 250px;
-	margin-top: 15px;
+
+html,body{
+	background-color: hotpink;
 }
 
 </style>
 	</head>
 	<body>
 
-<div class="heading">
-	<p>
-		Hello my name is Lucy...
-	</p>
+<div class="links">
+	<a href="homepage.html">Lucy Curtis</a>
+
 </div>
 
-<div class="links">
-	<a href="week_1/index.html">Levels</a>
-	<br><br>
-	<a href="week_1/essay.html">essay</a>
-</div>
+
+
+
+
 
 
 
