--- a/levels/level5c.html
+++ b/levels/level5c.html
@@ -63,12 +63,12 @@
     </div>
 
     <div class="nav five">
-    	<a href="essay.html"> essay </a>
+    	<a href="levels/essay.html"> essay </a>
 
     </div>
 
     <div class="nav three">
-    	<a href="level5b.html"> next -> </a>
+    	<a href="levels.html"> next -> </a>
 
     </div>
 
