--- a/levels/level5c.html
+++ b/levels/level5c.html
@@ -45,6 +45,31 @@
       		text-decoration: none;
       }
 
+      html,body{
+        background-color: blue;
+      }
+.white{
+  color: white;
+  font-family: arial;
+}
+
+.lightgrey{
+  color: lightgrey;
+  font-family: arial;
+  margin-top: -150px;
+}
+
+.grey{
+  color: grey;
+  font-family: arial;
+  margin-top: -150px;
+}
+
+.black{
+  color: black;
+  font-family: arial;
+  margin-top: -150px;
+}
     </style>
   </head>
   <body>
@@ -71,13 +96,41 @@
     	<a href="levels.html"> next -> </a>
 
     </div>
+<div class="white">
+  <h1>
+    We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.
 
-    <h1>
-      We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.
+    Encouraged in this direction, designers then apply their skill and imagination to sell dog biscuits, designer coffee, diamonds, detergents, hair gel, cigarettes, credit cards, sneakers, butt toners, light beer and heavy-duty recreational vehicles. Commercial work has always paid the bills, but many graphic designers have now let it become, in large measure, what graphic designers do. This, in turn, is how the world perceives design. The profession’s time and energy is used up manufacturing demand for things that are inessential at best.
+  </h1>
 
-      Encouraged in this direction, designers then apply their skill and imagination to sell dog biscuits, designer coffee, diamonds, detergents, hair gel, cigarettes, credit cards, sneakers, butt toners, light beer and heavy-duty recreational vehicles. Commercial work has always paid the bills, but many graphic designers have now let it become, in large measure, what graphic designers do. This, in turn, is how the world perceives design. The profession’s time and energy is used up manufacturing demand for things that are inessential at best.
-    </h1>
+</div>
 
+<div class="lightgrey">
+  <h1>
+    We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.
+
+    Encouraged in this direction, designers then apply their skill and imagination to sell dog biscuits, designer coffee, diamonds, detergents, hair gel, cigarettes, credit cards, sneakers, butt toners, light beer and heavy-duty recreational vehicles. Commercial work has always paid the bills, but many graphic designers have now let it become, in large measure, what graphic designers do. This, in turn, is how the world perceives design. The profession’s time and energy is used up manufacturing demand for things that are inessential at best.
+  </h1>
+
+</div>
+
+<div class="grey">
+  <h1>
+    We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.
+
+    Encouraged in this direction, designers then apply their skill and imagination to sell dog biscuits, designer coffee, diamonds, detergents, hair gel, cigarettes, credit cards, sneakers, butt toners, light beer and heavy-duty recreational vehicles. Commercial work has always paid the bills, but many graphic designers have now let it become, in large measure, what graphic designers do. This, in turn, is how the world perceives design. The profession’s time and energy is used up manufacturing demand for things that are inessential at best.
+  </h1>
+
+</div>
+
+<div class="black">
+  <h1>
+    We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.
+
+    Encouraged in this direction, designers then apply their skill and imagination to sell dog biscuits, designer coffee, diamonds, detergents, hair gel, cigarettes, credit cards, sneakers, butt toners, light beer and heavy-duty recreational vehicles. Commercial work has always paid the bills, but many graphic designers have now let it become, in large measure, what graphic designers do. This, in turn, is how the world perceives design. The profession’s time and energy is used up manufacturing demand for things that are inessential at best.
+  </h1>
+
+</div>
 
 
   </body>
