--- a/levels/levels.html
+++ b/levels/levels.html
@@ -80,10 +80,10 @@ a:hover {
 			</div>
 
 			<div class="nav five">
-				<a href="essay.html"> essay </a>
+				<a href="levels/essay.html"> essay </a>
 
 			</div>
- 
+
 			<div class="nav three">
 				<a href="level1a.html"> next -> </a>
 
