--- a/levels/levels.html
+++ b/levels/levels.html
@@ -80,7 +80,7 @@ a:hover {
 			</div>
 
 			<div class="nav five">
-				<a href="levels/essay.html"> essay </a>
+				<a href="./essay.html"> essay </a>
 
 			</div>
 
