--- a/levels/level5c.html
+++ b/levels/level5c.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="nav five">
-    	<a href=".levels/essay.html"> essay </a>
+    	<a href="essay.html"> essay </a>
 
     </div>
 
