--- a/levels/essay.html
+++ b/levels/essay.html
@@ -14,7 +14,7 @@
     margin-left:400px;
   }
 
-  h1{
+  .one{
     border:5px solid;
     width: 300px;
     color: blue;
@@ -82,7 +82,9 @@
 
     </div>
 <div>
-<h1>If It Doesn't Exist on the Internet, It Doesn't Exist</h1>
+<div class="one">
+  <p>If It Doesn't Exist on the Internet, It Doesn't Exist</p>
+</div>
 <h3>Kenneth Goldsmith</h3>
 
 <em>Presented at Elective Affinities Conference, University of Pennsylvania, September 27, 2005</em>
