--- a/levels/essay.html
+++ b/levels/essay.html
@@ -14,7 +14,7 @@
     margin-left:400px;
   }
 
-  .one{
+  h1{
     border:5px solid;
     width: 300px;
     color: blue;
@@ -82,9 +82,7 @@
 
     </div>
 <div>
-<div class="one">
-  <p>If It Doesn't Exist on the Internet, It Doesn't Exist</p>
-</div>
+<h1>If It Doesn't Exist on the Internet, It Doesn't Exist</h1>
 <h3>Kenneth Goldsmith</h3>
 
 <em>Presented at Elective Affinities Conference, University of Pennsylvania, September 27, 2005</em>
