--- a/levels/essay.html
+++ b/levels/essay.html
@@ -7,6 +7,7 @@
 <style media="screen">
   body {
     font-family: courier;
+    background: linear-gradient(white,lightgrey, grey);
   }
 
   div {
@@ -19,6 +20,8 @@
     width: 300px;
     color: blue;
     padding: 10px;
+    position:fixed;
+    margin-left: 20px;
   }
 
   h2{
@@ -38,7 +41,7 @@
     font-family: courier;
     padding-bottom: 20px;
     font-size: 12pt;
-    margin-top: 20px;
+    margin-top: 80px;
 
   }
 
@@ -61,9 +64,9 @@
   </head>
   <body>
 
-
-<div>
 <h1>If It Doesn't Exist on the Internet, It Doesn't Exist</h1>
+<div>
+
 <h3>Kenneth Goldsmith</h3>
 
 <em>Presented at Elective Affinities Conference, University of Pennsylvania, September 27, 2005</em>
@@ -165,22 +168,9 @@ Back to Kenneth Goldsmith's Author Page | Back to EPC
 
 <div class="nav">
 
-  <a href="index.html"> <- previous</a>
+  <a href="levels.html"> RETURN HOME</a>
 </div>
 
-
-<div class="nav four">
-  <a href="levels.html"> levels</a>
-
-</div>
-
-<div class="nav five">
-  <a href="essay.html"> essay </a>
-
-</div>
-
-<div class="nav three">
-  <a href="levels.html"> next -> </a>
 
 </div>
 
