--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
 	display: inline-block;
 	padding-right: 50px;
 	font-family: courier;
-	margin-top: 20px; 
+	margin-top: 20px;
 	padding-bottom: 20px;
 	font-size: 12pt;
 }
@@ -84,7 +84,7 @@ a:hover {
 		</div>
 
 		<div class="nav five">
-			<a href="essay.html"> essay </a>
+			<a href="./essay.html"> essay </a>
 
 		</div>
 
