--- a/homepage.html
+++ b/homepage.html
@@ -84,7 +84,7 @@ a:hover {
 		</div>
 
 		<div class="nav five">
-			<a href="./essay.html"> essay </a>
+			<a href="../essay.html"> essay </a>
 
 		</div>
 
