--- a/levels/level1b.html
+++ b/levels/level1b.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>level 1b</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
 		.nav{
@@ -12,7 +12,7 @@
 			padding-bottom: 20px;
 			font-size: 12pt;
 			margin-top: 20px;
- 
+
 		}
 
 		a:link {
