--- a/levels/level2b.html
+++ b/levels/level2b.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>level 2b</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 		<style media="screen">
@@ -14,7 +14,7 @@
 			font-size: 12pt;
 			margin-top: 20px;
 
-		} 
+		}
 
 		a:link {
 			color: hotpink;
