--- a/levels/level3b.html
+++ b/levels/level3b.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lucy Curtis</title>
+    <title>level 3b</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <style media="screen">
 
@@ -19,7 +19,7 @@ margin-top: 650px;
 margin-bottom: 900px;
 margin-left: 35px;
 width: 700px;
-} 
+}
 
 .nav{
   margin-left: 170px;
