--- a/levels/level1a.html
+++ b/levels/level1a.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>level 1a</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
 		.nav{
-			margin-left: 170px; 
+			margin-left: 170px;
 			display: inline-block;
 			padding-right: 50px;
 			font-family: courier;
