--- a/levels/level1c.html
+++ b/levels/level1c.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>First Name Last Name</title>
+		<title>level 1c</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
 		.nav{
@@ -13,7 +13,7 @@
 			font-size: 12pt;
 			margin-top: 20px;
 
-		} 
+		}
 
 		a:link {
 			color: hotpink;
