--- a/levels/level3a.html
+++ b/levels/level3a.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lucy Curtis</title>
+    <title>level 3a</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <style media="screen">
 .paragraph{
@@ -19,7 +19,7 @@
   font-size: 12pt;
   margin-top: 20px;
 
-} 
+}
 
 a:link {
   color: hotpink;
