--- a/levels/levels.html
+++ b/levels/levels.html
@@ -133,7 +133,7 @@ a:hover {
 	<a href="level4c.html">
 <img style="width: 150px; height: 150px;"src="images/4c.jpg" alt="">
 	</a>
-	<a href="./level5a.html"> 
+	<a href="level5a.html"> 
 <img style="width: 150px; height: 150px;"src="images/5a.jpg" alt="">
 	</a>
 	<a href="level5b.html">
