--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style media="screen">
 a:link {
 	color: hotpink;
-	text-decoration: none; 
+	text-decoration: none;
 }
 a:visited {
     color: hotpink;
@@ -25,7 +25,7 @@ a:hover {
 	border: 5px solid;
 	border-color: blue;
 	padding: 20px;
-	width: 200px;
+	width: 400px;
 }
 
 
@@ -38,8 +38,15 @@ html,body{
 	<body>
 
 <div class="links">
-	<a href="homepage.html">Lucy Curtis</a>
+	<a href="homepage.html">PROJECT ONE</a>
+</div>
 
+<div class="links">
+	<a href="levels/essay.html">ESSAY</a>
+</div>
+
+<div class="links">
+	<a href="project_2/index.html">PROJECT TWO</a>
 </div>
 
 
