--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <style media="screen">
 a:link {
-	color: hotpink;
+	color: white;
 	text-decoration: none;
 }
 a:visited {
-    color: hotpink;
+    color: white;
 		text-decoration: none;
 }
 a:hover {
@@ -19,12 +19,9 @@ a:hover {
 
 .links{
 	font-family: courier;
-	font-size: 35pt;
+	font-size: 25pt;
 	margin-left: 250px;
 	margin-top: 85px;
-	border: 5px solid;
-	border-color: blue;
-	padding: 20px;
 	width: 400px;
 }
 
@@ -33,12 +30,23 @@ html,body{
 	background-color: hotpink;
 }
 
+h1{
+	font-family: courier;
+	color: white;
+	margin-left: 500px;
+}
+
 </style>
 	</head>
 	<body>
 
+<h1>Digital Publishing</h1>
+
+
+
+<ul>
 <div class="links">
-	<a href="homepage.html">PROJECT ONE</a>
+	<a href="homepage.html">15 VARIATIONS</a>
 </div>
 
 <div class="links">
@@ -46,8 +54,10 @@ html,body{
 </div>
 
 <div class="links">
-	<a href="project_2/index.html">PROJECT TWO</a>
+	<a href="project_2/index.html">REPOST</a>
 </div>
+
+</ul>
 
 
 
