--- a/project_2/index.html
+++ b/project_2/index.html
@@ -25,8 +25,14 @@
 				text-decoration: none;
 				font-family:courier;
 				color:hotpink;
-				margin-left: 500px;
-				font-size: 60pt;
+				margin-left: 550px;
+				font-size: 50pt;
+				padding: 20px;
+			}
+
+			a:hover {
+			    color: blue;
+					text-decoration: none;
 			}
 		</style>
 	</head>
@@ -36,10 +42,11 @@
 
 
 		<br>
-		<a href="text.html">Text</a> <br>
-		<a href="idea1.html">Idea 1</a> <br>
-		<a href="idea2.html">Idea 2</a> <br>
-		<a href="idea3.html">Idea 3</a>
+		<a href="text.html">TEXT</a> <br>
+		<a href="idea1.html">IDEA 1</a> <br>
+		<a href="idea2.html">IDEA 2</a> <br>
+		<a href="idea3.html">IDEA 3</a> <br>
+		<a href="outcome.html">OUTCOME</a>
 
 
 
