--- a/project_2/idea3.html
+++ b/project_2/idea3.html
@@ -3,10 +3,58 @@
 	<head>
 		<title>First Name Last Name</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<style media="screen">
+		ul{
+			margin-left: 900px;
+			position: fixed;
+			width: 400px;
+			font-family: courier;
+			font-size: 12pt;
+		}
+
+		img{
+				margin: 50px 0;
+				width: 600px;
+				height: 550px;
+				margin-top: 5px;
+				margin-left: 200px;
+			}
+
+		h1{
+			font-family: courier;
+			color: hotpink;
+			border: solid 5px;
+			border-color: hotpink;
+			padding: 5px;
+			width: 250px;
+			margin-left: 20px;
+		}
+	</style>
 	</head>
 	<body>
 
-		<a href="index.html">Home</a>
+		<h1>SOUNDCLOUD</h1>
+
+
+
+
+		<p>
+			<ul>
+			  <li>Identity of an author is becoming irellevant through robotic voice </li>
+			  <li>Identity is not necessassary</li>
+			  <li>Recording google translate robotic voice </li>
+				<li>Sense of the death of the author </li>
+			</ul>
+
+		</p>
+
+		<img src="audio.jpg" alt="" style="width:400px; height:200px;">
+		<img src="googletranslate.jpg" alt="" style="width: 800px; height: 500px; margin-left: 200px; margin-top: 40px;">
+		<img src="deathofauthor.jpg" alt="" style="width: 800px; height: 500px; margin-left: 200px; margin-top: 40px;">
+
+
+
+		<a href="index.html"style="font-family:courier; color:hotpink;">Home</a>
 
 	</body>
 </html>
