--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@ h1{
 	<a href="project_2/index.html">REPOST</a>
 </div>
 
+<div class="links">
+	<a href="project_3/index.html">READER</a>
+</div>
+
 </ul>
 
 
