--- a/project_3/index.html
+++ b/project_3/index.html
@@ -46,6 +46,7 @@
 		<a href="text1.html">ONE</a> <br>
 		<a href="text2.html">TWO</a> <br>
 		<a href="text3.html">THREE</a> <br>
+		<a href="inspiration.html">INSPIRATION</a>
 
 
 
