--- a/project_3.1/index.html
+++ b/project_3.1/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -23,7 +24,7 @@
 
 			a{
 				text-decoration: none;
-				font-family:courier; 
+				font-family:courier;
 				color:hotpink;
 				margin-left: 550px;
 				font-size: 50pt;
@@ -43,10 +44,11 @@
 
 		<br>
 		<a href="text.html">TEXT</a> <br>
-		<a href="text1.html">ONE</a> <br>
-		<a href="text2.html">TWO</a> <br>
-		<a href="text3.html">THREE</a> <br>
+		<a href="text_1.html">ONE</a> <br>
+		<a href="text_2.html">TWO</a> <br>
+		<a href="text_3.html">THREE</a> <br>
 		<a href="inspiration.html">INSPIRATION</a>
+    <a href="./trial2.html">OUTCOME</a>
 
 
 
