--- a/project_3.1/index.html
+++ b/project_3.1/index.html
@@ -43,12 +43,12 @@
 
 
 		<br>
-		<a href="./text.html">TEXT</a> <br>
-		<a href="./text_1.html">ONE</a> <br>
-		<a href="./text_2.html">TWO</a> <br>
-		<a href="./text_3.html">THREE</a> <br>
-		<a href="./inspiration.html">INSPIRATION</a>
-    <a href="./trial2.html">OUTCOME</a>
+		<a href="project_3/text.html">TEXT</a> <br>
+		<a href="project_3/text_1.html">ONE</a> <br>
+		<a href="project_3/text_2.html">TWO</a> <br>
+		<a href="project_3/text_3.html">THREE</a> <br>
+		<a href="project_3/inspiration.html">INSPIRATION</a>
+    <a href="project_3/trial2.html">OUTCOME</a>
 
 
 
