--- a/project_3.1/index.html
+++ b/project_3.1/index.html
@@ -43,12 +43,13 @@
 
 
 		<br>
-		<a href="project_3/text.html">TEXT</a> <br>
-		<a href="project_3/text_1.html">ONE</a> <br>
-		<a href="project_3/text_2.html">TWO</a> <br>
-		<a href="project_3/text_3.html">THREE</a> <br>
-		<a href="project_3/inspiration.html">INSPIRATION</a>
-    <a href="project_3/trial2.html">OUTCOME</a>
+		<a href="project_3.1/text.html">TEXT</a> <br>
+		<a href="project_3.1/text_1.html">ONE</a> <br>
+		<a href="project_3.1/text_2.html">TWO</a> <br>
+		<a href="project_3.1/text_3.html">THREE</a> <br>
+		<a href="project_3.1/inspiration.html">INSPIRATION</a>
+    <a href="project_3.1/home.html">OUTCOME</a>
+
 
 
 
