--- a/project_3.1/trial2.html
+++ b/project_3.1/trial2.html
@@ -9,16 +9,37 @@
 
     <style media="screen">
 
- 
+ /*body{
+   background-color: lightgrey;
+ }*/
 
     h1{
       font-family: arial;
-      color:red;
+      color:aqua;
       font-size: 100px;
-      margin-top: -10px;
+      margin-top: ;
+      margin-left: 350px
     }
 
-    .rollover{
+    .nav{
+      font-size: 20px;
+      font-family: arial;
+      padding: 20px;
+      margin-left: 1000px;
+    }
+
+
+    .nav a{
+      color: hotpink;
+      text-decoration: none;
+    }
+
+    .nav a:hover{
+      color: aqua;
+      text-decoration: line-through;
+    }
+
+/*    .rollover{
       color:red;
     }
 
@@ -32,13 +53,13 @@
   left:0;
   top:15vh;
   overflow: scroll;
+  color: hotpink;
 
 }
 
 .right {
   left:50%;
-  top:0vh;
-  background-color: red;
+  top:15vh;
 
 }
 
@@ -60,15 +81,23 @@ a{
   text-decoration: none;
   color: blue;
 
-}
+}*/
 
 .rollover{
-  color: red;
+  color: aqua;
 
+}
+
+.left {
+  margin:auto;
+  width: 55%;
+  color: hotpink;
+  font-family: arial;
+  font-size: 30px;
 }
 
 .rollover:hover{
-  color: blue;
+  text-decoration: line-through;
 }
 .blur{
   position:fixed;
@@ -106,20 +135,34 @@ a{
 }
 
 .political__image{
-  top:90px;
-  left:900px;
+  top:70px;
+  left:20px;
 }
 
 .pepper__image{
   top:310px;
-  left:930px;
+  left:600px;
   width: 550px;
   height:400px;
 }
 
 .american__image{
-  top:200px;
-  left:800px;
+  top:150px;
+  left:700px;
+}
+
+.flash {
+   animation-name: flash;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-play-state: running;
+}
+
+@keyframes flash {
+    from {color: hotpink;}
+    to {color: aqua;}
 }
 
 
@@ -128,7 +171,13 @@ a{
   </head>
   <body>
 
-<strong><h1>U MAD BRO?</h1></strong>
+    <div class="nav">
+			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="#">FOUR</a></strong>
+		</div>
+
+<strong><h1 class="flash">U MAD BRO?</h1></strong>
+
+
 
 
 <div class="col left">
@@ -170,19 +219,19 @@ a{
   </div>
 </div>
 
-<div class="col right">
+<!--<div class="col right">
 
-<!--<a name="obesity-meme"><img src="./obesity-meme.jpg" alt="" style="margin-left:50px;margin-top:50px;"></a>
+<a name="obesity-meme"><img src="./obesity-meme.jpg" alt="" style="margin-left:50px;margin-top:50px;"></a>
 <a name="political"><img src="./political.png" alt="" style="margin-left:50px;margin-top:50px;"></a>
 <a name="Pepper"><img src="./pepper.jpg" alt="" style="margin-left:50px;margin-top:50px;"></a>
-<a name="Funny"><img src="./Funny.jpg" alt="" style="padding-bottom:20px;margin-left:50px;margin-top:50px;"></a>-->
+<a name="Funny"><img src="./Funny.jpg" alt="" style="padding-bottom:20px;margin-left:50px;margin-top:50px;"></a
 
 
 
-</div>
+</div>>-->
 
 <img class="rotate chan__image"src="funny.jpg" alt="">
-<img class="blur political__image"src="political.png" alt="">
+<img class="blur political__image"src="political.jpg" alt="">
 <img class="blur pepper__image"src="pepper.jpg" alt="">
 <img class="rotate american__image"src="obesity-meme.jpg" alt="">
 
