--- a/project_3.1/contents.html
+++ b/project_3.1/contents.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
 
+		body{
+			background-color: hotpink;
+		}
+
 			h1{
 				color: aqua;
 				margin-left: 250px;
@@ -23,7 +27,7 @@
 	    }
 
 	    .nav a{
-	      color: hotpink;
+	      color: aqua;
 	      text-decoration: none;
 	    }
 
@@ -35,7 +39,7 @@
 
 
 p{
-  color: hotpink;
+  color: aqua;
   font-family: "Courier";
   font-size: 20px;
   margin-left: 300px;
@@ -103,7 +107,7 @@ span{
 
 
 		<div class="nav">
-			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="#">FOUR</a></strong>
+			<strong><a href="home.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="#">FOUR</a></strong>
 		</div>
 
 <h1>MEMES:</h1>
