--- a/project_3.1/home.html
+++ b/project_3.1/home.html
@@ -5,7 +5,9 @@
 		<title>Lucy Curtis</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
-			
+		body{
+			background-color: aqua;
+		}
 
 			h1{
 				margin-left: 350px;
