--- a/project_3.1/success.html
+++ b/project_3.1/success.html
@@ -5,7 +5,7 @@
     <title></title>
 
     <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
-    <script src="main.js" charset="utf-8"></script>
+    <script src="success.js" charset="utf-8"></script>
 
     <style media="screen">
 
@@ -276,7 +276,7 @@ a{
 <div class="col left">
   <div class="content">
 
-    <strong><p>The very best of the Success Kid meme shows that age is only a number as this smug little toddler accomplishes things you could only dream about. Complete with a "take that" smirk and a fist full of sand, the Success Kid, or Success Baby, owns everyone he comes in contact, is inventive and unbelievably lucky. His #winning puts even Charlie Sheen to shame. He is just that good, and he's only just a toddler.</p></strong>
+    <strong><p>The very <span class="rollover pepper">best</span> of the Success Kid meme shows that age is only a number as this smug little toddler accomplishes things you could only dream about. Complete with a "take that" smirk and a fist full of sand, the Success Kid, or Success Baby, owns everyone he comes in contact, is inventive and unbelievably lucky. His #winning puts even Charlie Sheen to shame. He is just that good, and he's only just a toddler.</p></strong>
 
     <p>The Success Kid meme started as an innocent photo taken by a mother of her son playing on the beach in 2007. Laney Griner photographed the then 11-month-old Sammy and posted the image on her Flickr account with the caption "Why I oughta..." Fast forward a few months and the image, which was since photoshopped to include a second child and the caption of "I hate sandcastles," began appearing on social networking sites like MySpace and StumbleUpon.
 
