--- a/project_3.1/trial2.html
+++ b/project_3.1/trial2.html
@@ -5,7 +5,7 @@
     <title></title>
 
     <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
-    <script src="main.js" charset="utf-8"></script>
+    <script src="assets/js/main.js" charset="utf-8"></script>
 
     <style media="screen">
 
@@ -230,10 +230,10 @@ a{
 
 </div>>-->
 
-<img class="rotate chan__image"src="funny.jpg" alt="">
-<img class="blur political__image"src="political.jpg" alt="">
-<img class="blur pepper__image"src="pepper.jpg" alt="">
-<img class="rotate american__image"src="obesity-meme.jpg" alt="">
+<img class="rotate chan__image"src="assets/images/funny.jpg" alt="">
+<img class="blur political__image"src="assets/images/political.jpg" alt="">
+<img class="blur pepper__image"src="assets/images/pepper.jpg" alt="">
+<img class="rotate american__image"src="assets/images/obesity-meme.jpg" alt="">
 
 
 
