--- a/project_3.1/success.html
+++ b/project_3.1/success.html
@@ -265,7 +265,7 @@ a{
   <body>
 
     <div class="nav">
-			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="#">FOUR</a></strong>
+			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
 		</div>
 
 <strong><h1 class="flash">THE VERY BEST OF SUCCESS KID MEME</h1></strong>
