--- a/project_3.1/doge.html
+++ b/project_3.1/doge.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title></title>
 
-    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
-    <script src="doge.js" charset="utf-8"></script>
+    <script src="assets/js/jquery.js" charset="utf-8"></script>
+    <script src="assets/js/doge.js" charset="utf-8"></script>
 
     <style media="screen">
 
@@ -239,8 +239,8 @@ But the dog that most often represents the doge meme nearly died a few years ago
 </div>
 
 
-<img class="rotate doge__image"src="doge.jpg" alt="">
-<img class="blur wow__image"src="doge.jpg" alt="">
+<img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
+<img class="blur wow__image"src="assets/images/doge.jpg" alt="">
 <img class="rotate such__image"src="doge.jpg" alt="">
 <img class="blur shiba__image"src="doge.jpg" alt="">
 <img class="rotate citrus__image"src="doge.jpg" alt="">
