--- a/project_3.1/trial2.html
+++ b/project_3.1/trial2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
 
-    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
+    <script src="assets/js/jquery.js" charset="utf-8"></script>
     <script src="assets/js/main.js" charset="utf-8"></script>
 
     <style media="screen">
