--- a/contents.html
+++ b/contents.html
@@ -161,7 +161,7 @@ height:300px;
 
 
 		<div class="nav">
-			<strong><a href="home.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
+			<strong><a href="index.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
 		</div>
 
 <h1>MEMES:</h1>
