--- a/contents.html
+++ b/contents.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Lucy Curtis</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets2/css/style.css">
 
 		<script src="assets/js/jquery.js" charset="utf-8"></script>
     <script src="assets/js/contents.js" charset="utf-8"></script>
@@ -129,6 +129,19 @@ left:740px;
 width: 350px;
 height:300px;
 }
+.success__image{
+top:70px;
+left:740px;
+width: 350px;
+height:300px;
+}
+
+.arthur__image{
+top:70px;
+left:740px;
+width: 350px;
+height:300px;
+}
 
 .title1{
 	margin-left: 1300px;
@@ -142,7 +155,7 @@ height:300px;
 
 .title3{
 	margin-left: 1800px;
-	margin-top:
+	margin-top:  200px;
 }
 
 .title4{
@@ -177,7 +190,7 @@ height:300px;
 </div>
 
 <div class="title3">
-	<h1>GOOD GUY GREG</h1>
+	<span class="rollover arthur"><h1>ARTHUR</h1></span>
 </div>
 
 <div class="title4">
@@ -190,7 +203,8 @@ height:300px;
 
 
 <img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
-<img class="blur success__image"src="assets/images/baby.jpg" alt="">
+<img class="blur success__image"src="assets/images/success.jpg" alt="">
+<img class="rotate arthur__image"src="assets/images/arthur.jpg" alt="">
 
 
 
