--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			}
 
 			.flash {
-			   animation-name: flash;
+				color: hotpink;
+			   /*animation-name: flash;
 			    animation-duration: 0.5s;
 			    animation-timing-function: linear;
 			    animation-iteration-count: infinite;
@@ -37,7 +38,7 @@
 
 			@keyframes flash {
 			    from {color: hotpink;}
-			    to {color: aqua;}
+			    to {color: aqua;}*/
 			}
 		</style>
 	</head>
