--- a/doge.html
+++ b/doge.html
@@ -125,38 +125,18 @@
   transition: all 2s;
   }
 
-  .shiba__image{
-  top:50px;
-  left:740px;
-  width: 350px;
-  height:300px;
-  }
-
-  .citrus__image{
-  top:50px;
-  left:740px;
-  width: 350px;
-  height:300px;
-  }
-
   .most__image{
+  top:200px;
+  left:300px;
+  width: 650px;
+  height:500px;
+  }
+
+  .japanese__image{
   top:50px;
   left:740px;
-  width: 350px;
-  height:300px;
-  }
-
-
-  .such__image{
-  top:70px;
-  left:20px;
-  }
-
-  .wow__image{
-  top:310px;
-  left:600px;
-  width: 550px;
-  height:400px;
+  width: 670px;
+  height:500px;
   }
 
   .doge__image{
@@ -228,7 +208,7 @@ But the dog that most often represents the doge meme nearly died a few years ago
   <br>
   <br>
 
-  A volunteer at the shelter gave the dog her name, a type of <span class="rollover citrus">Japanese citrus.</span> “Her face is very round just like kabosu [fruit],” Sato said. “I thought the name was perfect, so I kept it.”</i>
+  A volunteer at the shelter gave the dog her name, a type of <span class="rollover japanese">Japanese</span> citrus. “Her face is very round just like kabosu [fruit],” Sato said. “I thought the name was perfect, so I kept it.”</i>
 </blockquote>
 
 <br>
@@ -240,11 +220,10 @@ But the dog that most often represents the doge meme nearly died a few years ago
 
 
 <img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
-<img class="blur wow__image"src="assets/images/doge.jpg" alt="">
-<img class="rotate such__image"src="doge.jpg" alt="">
-<img class="blur shiba__image"src="doge.jpg" alt="">
-<img class="rotate citrus__image"src="doge.jpg" alt="">
-<img class="blur most__image"src="doge.jpg" alt="">
+<img class="rotate japanese__image"src="assets/images/japan_meme.jpg" alt="">
+<img class="rotate most__image"src="assets/images/dinoshark.jpg" alt="">
+
+
 
   </body>
 </html>
