--- a/contents.html
+++ b/contents.html
@@ -126,21 +126,18 @@ transition: all 2s;
 .doge__image{
 top:70px;
 left:740px;
-width: 350px;
-height:300px;
+
 }
 .success__image{
-top:70px;
-left:740px;
-width: 350px;
-height:300px;
+	top:70px;
+	left:740px;
+	
 }
 
 .arthur__image{
 top:70px;
 left:740px;
-width: 350px;
-height:300px;
+
 }
 
 .title1{
@@ -150,21 +147,16 @@ height:300px;
 
 .title2{
 	margin-left: 1700px;
-	margin-top: -400px;
+	margin-top: -185px;
+
 }
 
 .title3{
-	margin-left: 1800px;
-	margin-top:  200px;
+	margin-left: 2250px;
+	margin-top: -265px;
+	padding-right: 650px;
 }
 
-.title4{
-	margin-left: 2000px;
-}
-
-.title5{
-	margin-left: 1300px;
-}
 
 
 		</style>
@@ -182,7 +174,7 @@ height:300px;
 <p>	scroll through the best of the best --></p>
 
 <div class="title1">
-	<span class="rollover doge"><h1>DOGE</h1></span>
+	<a href="doge.html"><span class="rollover doge"><h1>DOGE</h1></span></a>
 </div>
 
 <div class="title2">
@@ -193,17 +185,11 @@ height:300px;
 	<span class="rollover arthur"><h1>ARTHUR</h1></span>
 </div>
 
-<div class="title4">
-	<h1>DOGE</h1>
-</div>
 
-<div class="title5">
-	<h1>DOGE</h1>
-</div>
 
 
 <img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
-<img class="blur success__image"src="assets/images/success.jpg" alt="">
+<img class="blur success__image"src="assets/images/successkid.jpg" alt="">
 <img class="rotate arthur__image"src="assets/images/arthur.jpg" alt="">
 
 
